--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Hanne Stray | Portfolio</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body id="home">
+  <body>
     <header class="nav-wrap">
       <nav class="nav container" aria-label="Primary navigation">
         <a class="brand" href="#home" data-section="home">Hanne Stray</a>
@@ -57,7 +57,7 @@
       <!-- WORK -->
       <section class="section" id="work">
         <div class="container">
-          <h2>My Work</h2>
+          <h2>My work</h2>
           <p class="section-sub">
             Three key projects from my Noroff studies. Each card includes a
             screenshot and links to the repository (and live site if available).
@@ -180,7 +180,7 @@
           <p>
             I'm a front-end development student at Noroff (online). I'm learning
             to build clear, user-friendly interfaces and improving the structure
-            and presentation of project-both code and documentation.
+            and presentation of projects - both code and documentation.
           </p>
           <p class="muted">
             Currently: finishing my studies, polishing my portfolio, and
@@ -198,7 +198,7 @@
           <div class="contact-lines">
             <p>
               <strong>Email:</strong>
-              <a href="mailto:hanhel55335@hotmail.com"
+              <a href="mailto:hanhel55335@noroff.stud.no"
                 >hanhel55335@noroff.stud.no</a
               >
             </p>
