chore: optimize images and improve profile presentataion

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
           <div class="contact-lines">
             <p>
               <strong>Email:</strong>
-              <a href="mailto:hanhel55335@noroff.stud.no"
-                >hanhel55335@noroff.stud.no</a
+              <a href="mailto:hanne_stray@hotmail.com"
+                >hanne_stray@hotmail.com</a
               >
             </p>
             <p>
